--- a/index.html
+++ b/index.html
@@ -69,10 +69,10 @@
                 <img src="assets/img/hawaii.jpg" class="d-block w-100" alt="...">
             </div>
             <div class="carousel-item">
-                <img src="assets/img/hawaii2.jpg" class="d-block w-100" alt="...">
+                <img src="assets/img/hawaii.jpg" class="d-block w-100" alt="...">
             </div>
             <div class="carousel-item">
-                <img src="assets/img/hawaii3.jpg" class="d-block w-100" alt="...">
+                <img src="assets/img/hawaii.jpg" class="d-block w-100" alt="...">
             </div>
 
             <div class="overlay">
@@ -237,7 +237,7 @@
 <section class="nosotros-banner ">
     <div class="container-fluid">
         <div class="row">
-            <div class="col-12 img-banner col-lg-6 pl-0 pr-0">
+            <div class="col-12 img-banner col-lg-6 pl-0 pr-0 col-auto d-none d-lg-block">
 
             </div>
 
